--- a/app/globals.scss
+++ b/app/globals.scss
@@ -14,13 +14,10 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+  margin: 0;
 }
 
 main {
